# java

./: .gitignore  Cargo.toml  OPTIONS.md  README.md  extension.json  extension.toml  justfile  snippets.json
.github/ISSUE_TEMPLATE/: 1-grammar-bug.yml  2-language-server-bug.yml  3-other-bug.yml  config.yml
.github/workflows/: ci.yml  release-proxy.yml
debug_adapter_schemas/: Java.json
gradle-bridge/: Cargo.toml
gradle-bridge/proto/: gradle.proto
gradle-bridge/src/: channel.rs  grpc.rs  main.rs  proto.rs  sync.rs  transport.rs
grammars/: java.toml
languages/doxygen/: config.toml  highlights.scm  injections.scm
languages/gradle/: config.toml  highlights.scm  outline.scm
languages/gradle-kts/: brackets.scm  config.toml  highlights.scm  indents.scm  injections.scm  outline.scm  overrides.scm
languages/java/: brackets.scm  config.toml  highlights.scm  injections.scm  outline.scm  overrides.scm  runnables.scm  tasks.cmd.example.json  tasks.fish.example.json  tasks.json  textobjects.scm
languages/properties/: config.toml  highlights.scm  overrides.scm
proxy/: BENCHMARK.md  Cargo.toml
proxy-common/: Cargo.toml
proxy-common/src/: lib.rs  lsp.rs  uri.rs
proxy-common/src/platform/: mod.rs
proxy/.cargo/: config.toml
proxy/src/: completions.rs  decompile.rs  formatter.rs  http.rs  log.rs  lsp.rs  main.rs
proxy/src/platform/: unix.rs  windows.rs
snippets/: groovy.json  kotlin.json  xml.json
src/: component.rs  config.rs  debugger.rs  download.rs  downloadable.rs  gradle_bridge.rs  gradle_ls.rs  gradle_ls_server.rs  java.rs  jdk.rs  jdtls.rs  jdtls_server.rs  language_server.rs  lib.rs  lsp.rs  proxy.mjs  proxy.rs  task.rs  util.rs
task_helper/: Cargo.toml
task_helper/src/: command.rs  main.rs  platform_paths.rs
task_helper/src/build_tool/: gradle.rs  maven.rs  mod.rs  vanilla.rs
testdata/: args_empty_list.json  args_list_no_spaces.json  args_single_element_with_spaces.json  args_single_string.json  args_with_spaces.json
tests/: java.rs  parse_test.rs  task_verification_test.rs
tests/languages/java/: DefaultPackage.java  DefaultPackageTest.java
tests/languages/java/example/: Main.java  NestedTest.java  SingleLevelPackage.java  SingleLevelTest.java
tests/languages/java/org/example/: Injections.java  MultiLevelPackage.java  MultiLevelTest.java  Outline.java  TextObjects.java
tests/languages/java/snapshots/: injections.snap  outline.snap  runnables_default_package.snap  runnables_default_package_test.snap  runnables_multi_level.snap  runnables_multi_level_test.snap  runnables_nested_test.snap  runnables_single_level.snap  runnables_single_level_test.snap  textobjects.snap
tests/support/: mod.rs
