
[package]
name = "zed_java"
version = "6.5.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[lib]
path = "src/java.rs"
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
regex = "1.12.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
zed_extension_api = "0.7.0"
