[workspace]
members = [
    ".",
    "proxy",
    "task_helper",
    "proxy-common",
    "gradle-bridge"
]

[workspace.dependencies]
proxy-common = { path = "proxy-common" }

[package]
name = "zed_java"
version = "6.8.24"
edition = "2024"
publish = false
license = "Apache-2.0"

[lib]
path = "src/java.rs"
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
percent-encoding = "2.3.2"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
zed_extension_api = "0.7.0"

[dev-dependencies]
tree-sitter = "0.26.8"
tree-sitter-java = "0.23.5"
insta = { version = "1.46", features = ["yaml"] }
