[package]
name = "proxy-common"
version = "6.8.23"
edition = "2021"
publish = false
license = "Apache-2.0"
description = "Shared primitives (LSP framing, parent-process monitor) for the Zed Java extension's native binaries"

[lib]
name = "proxy_common"
path = "src/lib.rs"

[features]
tokio = ["dep:tokio"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", default-features = false, features = ["io-util"], optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_System_Diagnostics_ToolHelp"] }
