[package]
name = "java-lsp-proxy"
version = "6.8.20"
edition = "2021"
publish = false
license = "Apache-2.0"
description = "Native LSP proxy for the Zed Java extension"

[[bin]]
name = "java-lsp-proxy"
path = "src/main.rs"

[dependencies]
proxy-common.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
