[package]
name = "java-task-helper"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"
description = "Task management helper for the Zed Java extension"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.17.1"
